# cryptotrader

./: .gitignore  Makefile  fix_imports.py  pyproject.toml  run_component.py  run_cryptotrader.bat  run_watchlist.py
archetectum/: project_structure.md
archetectum/scripts/: README.md  file_structure_to_md.py  validate_doc_structure.py
architectum/: architectum_structure.md  project_structure.md
architectum/scripts/: README.md  create_arch_files.py  file_structure_to_md.py  script_manager.py  sync_doc_structure.py  sync_folder_structure.py  sync_folder_structure_pathlib.py  validate_doc_structure.py
architectum/test/scripts/: test_sync_folder_structure.py
config/: mapper.py  secrets.py
scripts/: set_sys_path.py
src/: README.md  _cryptotrader_app_structure.yaml  main.py
src/architectum/: architectum_structure.md  project_structure.md
src/architectum/project_overview/: app_structure.md  architectum_specs_structure.md  docs_manifest.yaml  models_shape.json  project_condensed.py
src/architectum/scripts/: README.md  create_arch_files.py  file_structure_to_md.py  manifest_builder.py  script_manager.py  sync_folder_structure.py  sync_folder_structure_pathlib.py
src/config/: __init__.py  log_config.py  secrets.py
src/cryptotrader/: .env  .gitignore  README.md  __init__.py  app.py  binance_test_script.py  config.py  main.py  models.py  pyproject.toml
src/cryptotrader/Examples/: module_1.py
src/cryptotrader/config/: __init__.py  log_config.py  logging.py  secrets.py  settings.py
src/cryptotrader/connections/: binance.py  binance_futures.py  bitmex.py
src/cryptotrader/connectors/: binance_futures.py
src/cryptotrader/gui/: __init__.py  app_styles.py  dpgTest.py  gui_structure.yaml  logging_panel.py  main_layout.py  main_window.py  pyqtTest.py  styling.py  tkTest.py  trades.py  watchlist.py
src/cryptotrader/models/: binance_models.py
src/cryptotrader/qtGui/: __init__.py  main_window.py
src/cryptotrader/routes/: api.py
src/cryptotrader/services/: binance_client.py
src/cryptotrader/utils/: binance_rest_client.py  binance_ws_client.py
src/gui/: main_layout.py  main_window.py
src/gui/componenets/: chart_widget.py  watchlist.py
src/gui/components/: chart_widget.py  logging_componenet.py  logging_panel.py  watchlist.py  (+5 more)
src/notes/: coin_gecko_notes.md  profit_distribution_ideas.md
src/project_plan/: pm_instructions.md
src/scripts/: gen_tree_md.py
src/services/: symbol_service.py
(+352 files in other folders)
