[project]
name = "python-crypto-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.9.7",
    "sqlalchemy>=2.0.38",
    "uvicorn[standard]>=0.34.0",
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
[tool.pytest.ini_options]
pythonpath = "src"

[tool.uv.workspace]
members = ["cryptotrader"]
