[project]
name = "python-crypto-trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "questionary>=2.1.0",
    "ruff>=0.9.7",
    "sqlalchemy>=2.0.38",
    "uvicorn[standard]>=0.34.0",
    "websockets>=15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
[tool.pytest.ini_options]
pythonpath = "src"

[tool.uv.workspace]
members = ["cryptotrader"]

[build-system]
requires = ["setuptools>=60.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
watchlist-demo        = "cryptotrader.gui.components.demos.watchlist_demo:main"

# new entries for your Architectum scripts
file-structure-to-md         = "architectum.scripts.file_structure_to_md:main"
sync-folder-structure        = "architectum.scripts.sync_folder_structure:main"
create-arch-files            = "architectum.scripts.create_arch_files:main"
script-manager               = "architectum.scripts.script_manager:main"
build-manifest        = "architectum.scripts.manifest_builder:main"

